Add regular expression based log generation.